--- a/Battleship_MobileApp.NET.Maui/Views/MainMenuPage.xaml
+++ b/Battleship_MobileApp.NET.Maui/Views/MainMenuPage.xaml
@@ -2,7 +2,8 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Battleship_MobileApp.NET.Maui.Views.MainMenuPage">
+             x:Class="Battleship_MobileApp.NET.Maui.Views.MainMenuPage"
+             Title="Main Menu">
     <ContentPage.Content>
         
     </ContentPage.Content>
