--- a/Battleship_MobileApp.NET.Maui/Views/PreparationPage.xaml
+++ b/Battleship_MobileApp.NET.Maui/Views/PreparationPage.xaml
@@ -2,7 +2,8 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Battleship_MobileApp.NET.Maui.Views.PreparationPage">
+             x:Class="Battleship_MobileApp.NET.Maui.Views.PreparationPage"
+             Title="Place Your Ships">
     <ContentPage.Content>
         
     </ContentPage.Content>
